--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -59,23 +59,33 @@
     <Compile Include="ICallback.cs" />
     <Compile Include="Model\Model_5_08.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="XmlValidator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-    <None Include="XSD\5_08__08.xsd">
+    <None Include="XSD\xsd__5_08__08.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="XSD\5_08__09.xsd">
+    <None Include="XSD\xsd__5_08__09.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="XSD\5_08__10.xsd">
+    <None Include="XSD\xsd__5_08__10.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="XSD\5_08__11.xsd">
+    <None Include="XSD\xsd__5_08__11.xsd">
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
